# lyrion-playcount-sync

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_DATABASE.md  CLEANUP_REPORT.txt  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  CONFIGURATION.md  CONFIGURATION_STATUS.md  DATABASE.md  DATABASE_API.md  DEVELOPMENT_COMPLETE.md  DOCKER.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATE_FINAL.txt  DOCUMENTATION_UPDATE_QUICK.txt  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE_VALIDATION.md  Dockerfile  EXAMPLES.md  IMPLEMENTATION_SYNCDETECTOR.md  INDEX.md  INSTALLATION.md  INTEGRATION_CHECKLIST.md  LAUNCHER_GUIDE.md  LOCAL_MODE.md  LOCAL_MODE_SUMMARY.txt  MAINWINDOW.md  MAINWINDOW_README.txt  MAINWINDOW_SUMMARY.md  MAIN_ORCHESTRATION.md  MATCHDIALOG.md  MATCHDIALOG_COMPLETION.md  MATCHDIALOG_FINAL_REPORT.txt  MATCHDIALOG_README.txt  MATCHDIALOG_SUMMARY.md  MODELS.md  MODELS_README.txt  MODELS_SUMMARY.md  (+39 more)
config/: config.yaml.example  docker-compose.yml
docs/: INDEX.md  MIGRATION_PLAN.md  STRUCTURE.md
docs/01-getting-started/: OVERVIEW.md  QUICKSTART.md  (+1 more)
examples/: examples_configuration.py  examples_models.py  examples_track_matcher.py  integration_configuration.py
lyrion_playcount_sync/: __init__.py  config.yaml.example  main.py
scripts/: check_install.py  deploy.py  launch.py  launch.sh  run.py  setup.bat  setup.sh
src/: __init__.py  main.py
tests/: test_config_logging.py  test_database.py  test_dpsv.py  test_main_window.py  test_match_dialog.py  test_models.py  test_sync_detector.py  test_sync_operations.py  test_track_matcher.py
(+30 files in other folders)
